updated at: 2023-08-03 17:07, VRchat想定　なでるモーションセット - 我楽多工房 - BOOTH

--- a/VRChat/28/1075528.html
+++ b/VRChat/28/1075528.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "YWjxUVg7XNjkA5bTPDPR8ViRRoil9llKXSFQXD7tpGA="></script>
+    "Px9eJqJvgIev5Q4XNmmL6hQrxmRwF9QQ4lsLNF1X+2I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat想定　なでるモーションセット","description":"VRchat エモート向けなでるアニメーション4種セットです。\n\n内容物\nanimationfile8種\n・なでなで　　(二往復)　四種\n・なでなでx4　(四往復)　四種\nVRchat用overridecontroller\n\nこちらを使用することでDeskTopでも人を撫でることができるようになります。\n\n画像ではキツネツキさん作成のオリジナルモデル「右近」を使用させていただいておりますが付属はいたしませんのでご了承ください。\n","url":"https://booth.pm/ja/items/1075528","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/54d1b61a-a76a-4e92-aff9-20e36195e60e/i/1075528/01f4193d-4801-4cbb-bb5d-92728e7df688_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YWjxUVg7XNjkA5bTPDPR8ViRRoil9llKXSFQXD7tpGA="></script>
+    nonce="Px9eJqJvgIev5Q4XNmmL6hQrxmRwF9QQ4lsLNF1X+2I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               VRchat想定　なでるモーションセット
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -263,9 +265,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
