updated at: 2023-08-03 17:07, おばねこ - udon-cat-works - BOOTH

--- a/VRChat/71/1075471.html
+++ b/VRChat/71/1075471.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "qWw9qNnUm5KoAT3lccXlZ+aMo2QFTHOTaoVnBNNHgsQ="></script>
+    "iuOWQhR48BCrcsdcDziBij4fyHLBoIXXzt4CXUspQiw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おばねこ","description":"おばけ✕猫のモデル、「おばねこ」です。\n※VRchatでの使用を想定してます。\n\n「ぞんねこ」の魂側になります。\n\n「おばねこ」は名前ではなく種族名なので好きな名前をつけてください。\n\n【バーチャルマーケット２展示場所】\nモクリバザールA\nA階段市場10","url":"https://booth.pm/ja/items/1075471","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3ec33236-919a-4b24-9e4c-e8c92c83cd19/i/1075471/b9475a38-9a98-4fb4-ac61-057f9c897530_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qWw9qNnUm5KoAT3lccXlZ+aMo2QFTHOTaoVnBNNHgsQ="></script>
+    nonce="iuOWQhR48BCrcsdcDziBij4fyHLBoIXXzt4CXUspQiw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -166,7 +166,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               おばねこ
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -202,6 +202,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -275,9 +277,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
