updated at: 2023-08-03 17:07, スタッフ証（注目看板つき） - CaTrusty - BOOTH

--- a/VRChat/35/1075235.html
+++ b/VRChat/35/1075235.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "s8zvIWMdzKhmETvs19AYH9iD2v1WkhfzupW4nMJrHJ8="></script>
+    "QhE6ORrxV4XFZPIR2sCe+aD2VFfeJ1k5PaTW7nkSwJc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スタッフ証（注目看板つき）","description":"光り輝くスタッフ証です。\n自分が実際にイベントスタッフをさせていただいた際に作成・使用したものです。\n画像のとおり、暗い場所でもよくわかります。その分目立ちます。\n\n\n・内容物はunitypackageのみです\n・テクスチャは使用していませんので色変え自由です。\n\n※無料版もお布施用も内容に差はありません。\n\n\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing","url":"https://booth.pm/ja/items/1075235","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1075235/29850427-00c4-44e7-ba30-25bd45a2965f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="s8zvIWMdzKhmETvs19AYH9iD2v1WkhfzupW4nMJrHJ8="></script>
+    nonce="QhE6ORrxV4XFZPIR2sCe+aD2VFfeJ1k5PaTW7nkSwJc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               スタッフ証（注目看板つき）
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      60
+                                      61
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,10 +185,12 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      60
+                                      61
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -350,9 +352,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
