updated at: 2023-08-03 17:08, 月と星の声【ダウンロード版】 - CrossingYourself - BOOTH

--- a/VRChat/93/1074593.html
+++ b/VRChat/93/1074593.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "JLKQCGrC3gVjRDOU5kN5s51rm8ZA4H9wMw/mzx1Imjc="></script>
+    "uneAe74DUenwQSCTmJERkwi2ddf2DEiKjXWCJO4sTrw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"月と星の声【ダウンロード版】","description":"2018秋M3にて頒布した、CrossingYourselfの1stアルバムです。\nUTAU/闇音レンリによる8曲のボーカル曲と、後半はVRChatで描かれてきたピアノソロ曲を多数収録。","url":"https://booth.pm/ja/items/1074593","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/6eba46cf-217d-410c-8775-e0bd2b2c49a3/i/1074593/401ba116-87e3-46cf-84ad-b39ca2f408fc_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JLKQCGrC3gVjRDOU5kN5s51rm8ZA4H9wMw/mzx1Imjc="></script>
+    nonce="uneAe74DUenwQSCTmJERkwi2ddf2DEiKjXWCJO4sTrw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -188,7 +188,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               月と星の声【ダウンロード版】
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -224,6 +224,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -332,9 +334,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
