updated at: 2023-08-03 17:08, 【VRchat推奨】ニット帽3種 - UNDOのよろず屋 - BOOTH

--- a/VRChat/35/1074435.html
+++ b/VRChat/35/1074435.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "rtEJomJIlCAH1RvCy+yt6ZwJ1Btf91YyjfH3r62bV08="></script>
+    "Kk4akC6kUGxaT19l3lva9A0NI83G3vpwQ3tWduHPT+s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat推奨】ニット帽3種","description":"ニット帽ができました。３種類です。今回は低ポリにこだわったのでこの耳当て付きのも６００以下です。シェイプキーで横幅調節できます。\n　\n内容物\nＦＢＸ３種　テクスチャセット（ベースマップ　ノーマル　メタリック）","url":"https://booth.pm/ja/items/1074435","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/97a252e6-17fb-4604-b972-5868719c8877/i/1074435/65de31ca-383b-448e-9923-07c6fef32958_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rtEJomJIlCAH1RvCy+yt6ZwJ1Btf91YyjfH3r62bV08="></script>
+    nonce="Kk4akC6kUGxaT19l3lva9A0NI83G3vpwQ3tWduHPT+s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【VRchat推奨】ニット帽3種
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -298,9 +300,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
