--- a/VRChat/33/1073033.html
+++ b/VRChat/33/1073033.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "OqgWMcPJfB2HGeoyU3f3HjP7rh8thzXBtAD4BZkHKWs="></script>
+    "TOEAvEkd419Dpkml19OQ0P1p6ChFyEhqW3Sx2i2X7Po="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"C's Stealth Shader","description":"VRChat向けに作成した、光学迷彩的に透明になるステルスシェーダーです。\n\n◆VRChat向けの商品ですが、その他の用途ではサポート外となります。\n◆Unity 2017想定\n◆改変可能\n◆商用利用の場合は、必ず著作権者を明示してください。\n\n◆ライセンス\nコンテンツは著作権で保護されています。\nコンテンツを使用することにより、以下の条件に同意するものとします。\n\n1.コンテンツをそのまま許可なく第三者へ販売、配布の禁止。\n　著作者の利益を損なう場合を除き、コンテンツが音声や動画、ソフトウェアや機械、あるいは演劇等の作品に組み込まれる場合はこの限りではない。\n\n2.商用利用では個人、法人を問わず、必ず解釈できるように著作者がClomaであることを明示すること。\n\n3.コンテンツを改変した物についても、当ライセンスを継承すること。\n\n規約は予告なしに変更されることがあります。","url":"https://booth.pm/ja/items/1073033","offers":{"priceCurrency":"JPY","@type":"Offer","price":"740"},"image":"https://booth.pximg.net/c/620x620/02658766-23c0-4747-bfaf-8658ada54514/i/1073033/d8c0df13-0c68-40bc-abe8-5383a3853b86_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OqgWMcPJfB2HGeoyU3f3HjP7rh8thzXBtAD4BZkHKWs="></script>
+    nonce="TOEAvEkd419Dpkml19OQ0P1p6ChFyEhqW3Sx2i2X7Po="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -176,7 +176,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               C's Stealth Shader
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -212,6 +212,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -320,9 +322,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
