--- a/VRChat/33/1072633.html
+++ b/VRChat/33/1072633.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "hPtkuB9diJT6Xa0fCRlb9P5XhQf9AZch/vfZ4csHfZ8="></script>
+    "3ZXa8ZTmI+T37PSC9erPSkjmIDvEqxQstSCwHBlUA+8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat利用想定 寄生虫","description":"バイオハザードとか寄生獣とかそんな感じのやつです。バイオハザード4のプラーガを強く参考にしたのでそんな感じになっています。まんまるシェーダー1.3とDynamic Boneを設定していますので、インポートしておいた方がいいと思います。ハロウィンのためだけに作ったのでもったいないから配布します。\nキモがられても自己責任でお願いします。","url":"https://booth.pm/ja/items/1072633","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/cdb02673-8664-4200-9407-c3c4df48aa2c/i/1072633/1960c820-59e7-42ef-b3ce-243a43ea8019_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hPtkuB9diJT6Xa0fCRlb9P5XhQf9AZch/vfZ4csHfZ8="></script>
+    nonce="3ZXa8ZTmI+T37PSC9erPSkjmIDvEqxQstSCwHBlUA+8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -148,7 +148,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               VRChat利用想定 寄生虫
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -184,6 +184,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -345,9 +347,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
