updated at: 2023-08-03 17:09, fbxモデル ｢AirRifle」 - Store*Snowlight - BOOTH

--- a/VRChat/70/1072670.html
+++ b/VRChat/70/1072670.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "7ifJjTWeDQ9+VxhbG2xw9hC4aoMW5p+Y5pa1tb0AQ/w="></script>
+    "le3Doksdpsvl4JE/ecOXzr7n9Z174b7EnjugYr1xBt0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"fbxモデル ｢AirRifle」","description":"English explanation is at the bottom of this page.\n\n本製品は、競技用のエアライフルを模したfbx形式の3D武器モデルです。\nUnityでの利用を想定しておりますが、Blender等にインポートすることで別形式に変換することも可能です。","url":"https://booth.pm/ja/items/1072670","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/bb487ead-0245-44f1-9e26-22a99b59aed0/i/1072670/ef9f42af-a0be-4585-910f-c93ee3fac8bc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7ifJjTWeDQ9+VxhbG2xw9hC4aoMW5p+Y5pa1tb0AQ/w="></script>
+    nonce="le3Doksdpsvl4JE/ecOXzr7n9Z174b7EnjugYr1xBt0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -157,7 +157,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               fbxモデル ｢AirRifle」
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -193,6 +193,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -313,9 +315,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
