--- a/VRChat/88/1071588.html
+++ b/VRChat/88/1071588.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "8iCbQXqsDesuKCoFa73f7pIMFM5uvKumqUp4tUhpVqA="></script>
+    "MM4zIOvxzLsOCuAkqxQYqTdrwU5uzVxtKVTKAsy/u7g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"C Sharp Force バッジ","description":"C Sharp Forceのバッジです。\n活動内容、条件などはとくにありませんので、VRChatでC#について話してみたい、みたいな方はどなたでも自由にご利用いただけます。\n改変、再配布も自由です。","url":"https://booth.pm/ja/items/1071588","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/64d6cf4e-7b03-4338-9fdc-ca5b8647d504/i/1071588/2c0325e2-40dc-49a6-83a9-99f83f98525f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8iCbQXqsDesuKCoFa73f7pIMFM5uvKumqUp4tUhpVqA="></script>
+    nonce="MM4zIOvxzLsOCuAkqxQYqTdrwU5uzVxtKVTKAsy/u7g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -154,7 +154,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               C Sharp Force バッジ
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -190,6 +190,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -263,9 +265,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
