updated at: 2023-08-03 17:09, 浣腸器 - 人質屋 - BOOTH

--- a/VRChat/89/1070889.html
+++ b/VRChat/89/1070889.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "uqiU0wmE5iz2ix2bloFn5e2p5mF5XaxH6UN9RQ3GwRY="></script>
+    "kZYwBTop4tztbUij6mEBSC7vOR0G8KYT6oHOsT1WYCI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"浣腸器","description":"医療器具フリー素材3Dモデル\n△488\n","url":"https://booth.pm/ja/items/1070889","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/895a216f-4b58-4d03-b933-8ac2468d7aa2/i/1070889/a442c5ad-0d97-4ef7-9ab4-08613950736f_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uqiU0wmE5iz2ix2bloFn5e2p5mF5XaxH6UN9RQ3GwRY="></script>
+    nonce="kZYwBTop4tztbUij6mEBSC7vOR0G8KYT6oHOsT1WYCI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -143,7 +143,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               浣腸器
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -179,6 +179,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -252,9 +254,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
