updated at: 2023-08-03 17:10, ボクセルレッサーモクリ（南条式） - nanjou0621 - BOOTH

--- a/VRChat/24/1070924.html
+++ b/VRChat/24/1070924.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "V973Ob2T0WTVi9RoQnH27+nSyhlxf+p915SNhiFA7Jk="></script>
+    "b5Kp4jOS56bnUSIiEcstFaQ/DXeMgdq5xu6ey+TIJOo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクセルレッサーモクリ（南条式）","description":"VRChatとバーチャルキャストでの利用を想定したモデルです。\n導入がすぐできるようになってますので楽しんでください！\n18594ポリゴン\n\n利用規約はファンメイド作品になりますので、レッサーモクリ公式の利用規約内での利用をお願いします。\nhttp://mokuri.world/二次創作について/\n\n製作者：南条\nVRChat ID:Nanjou\nTwitter ID:domyoji099","url":"https://booth.pm/ja/items/1070924","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/66272468-a0f6-4b14-9c49-f8687560ee2c/i/1070924/2eb7d733-bb71-4652-8442-fd402bf5255f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="V973Ob2T0WTVi9RoQnH27+nSyhlxf+p915SNhiFA7Jk="></script>
+    nonce="b5Kp4jOS56bnUSIiEcstFaQ/DXeMgdq5xu6ey+TIJOo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -148,7 +148,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               ボクセルレッサーモクリ（南条式）
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -184,6 +184,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -259,9 +261,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
