--- a/VRChat/96/1070896.html
+++ b/VRChat/96/1070896.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "LOBL7Xmz9eNwvlQGvm/QY3Mdss2OVu3SsuDGmVsecxY="></script>
+    "zL6Gig8AO2wyq7sdGLe8tJTsgxhRXlqooqJEJ84Kjy0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル コムラサキ","description":"MagicaVoxelにて作成された3Dモデルです。\nVRChatやその他ゲームなどのデジタルコンテンツにご利用いただけます。\n\n\n本モデルを購入した時点で本利用規約に同意したものとします。\n利用規約の内容は変更する場合があり、最新のものが適用されます。\n\n・本モデル、改造モデル著作権はほーのき（booooooh522）に帰属するものとします。\n・本モデルデータを使って制作された作品（動画・画像・ゲーム等）で対価を得る等、営利目的での使用は可能です。\n・本モデルデータの改変は自由です。\n・R-18, R-18Gコンテンツでの利用は自由です。\n・利用者が、二次創作で改変したモデルデータを配布することは禁止します。\n\n","url":"https://booth.pm/ja/items/1070896","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/766abe90-a3ce-40ec-829e-ee51f60a5e39/i/1070896/31ab00b0-4361-451f-b908-0a8a5e3c372c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LOBL7Xmz9eNwvlQGvm/QY3Mdss2OVu3SsuDGmVsecxY="></script>
+    nonce="zL6Gig8AO2wyq7sdGLe8tJTsgxhRXlqooqJEJ84Kjy0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -148,7 +148,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               3Dモデル コムラサキ
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -184,6 +184,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -258,9 +260,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
