updated at: 2023-08-03 17:10, VRChat向け　花のヘッドドレス - 山吹屋 - BOOTH

--- a/VRChat/36/1070236.html
+++ b/VRChat/36/1070236.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "9I14FXjwTQZA9EGwsD9UOMtEQDid2bPiRd4X/74bvGY="></script>
+    "0NjPLHQAlvLw35hTM1ntA5BDRyT8ZnrAADSrPc0TfTo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　花のヘッドドレス","description":"VRchat向けアクセサリ：花のヘッドドレス\nポリゴン数628のFBXファイルと\nテクスチャが入っております\n\nマテリアルは必ず「cutout」にしてください\n\n画像の状態は「Cubeds-Unity-Shaders」を使っています\nスタンダートシェーダーの場合、基本裏が透けてしまうので、何かしらのシェーダーをお勧めします\n\n商用利用・私的利用に対してご自由にお使いください\n大々的な再配布はお止めください","url":"https://booth.pm/ja/items/1070236","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/1070236/4f72624c-9fa7-4301-b65c-ddd09986439e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9I14FXjwTQZA9EGwsD9UOMtEQDid2bPiRd4X/74bvGY="></script>
+    nonce="0NjPLHQAlvLw35hTM1ntA5BDRyT8ZnrAADSrPc0TfTo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               VRChat向け　花のヘッドドレス
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -298,9 +300,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
