--- a/VRChat/39/1070139.html
+++ b/VRChat/39/1070139.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "w1NiYw3cAeNXK2GSnJFVb5/mDhQDKtVcbAvQeQJFzbs="></script>
+    "7YfOlsM/27f+GyoMe4DE+SD+m7SO8bTsMlor4ckV5YY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクシンググローブ　[FBXデータファイル 3DCG オブジェクト]","description":"【品名】 [ボクシンググローブ]FBXデータファイル3DCGオブジェクト\n[Boxing glove]fbx datafile 3DCG object\nフリー素材\n\nBG_L.fbx\nBG_R.fbx\ntexture.png\n\n◆利用想定　VRchat Vtuber\n◆ポリゴン数　△640(各320)ポリゴン\n\n【Version】1.00\n【最終更新日】2018.10.27\n【Copyright】©2018つくｘ２工房.Maiky\n\n※画像の女の子のモデルは付属しておりません。\n※アバターに装着する場合、手首や指を動かすと突き抜けが発生する場合があります。\n装着時はアバターの手首を固定する、又は手首を動かさない等の工夫が必要です。","url":"https://booth.pm/ja/items/1070139","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"180"},"image":"https://booth.pximg.net/c/620x620/50c466f8-ea25-4d84-97fb-a601d0055de7/i/1070139/c652a861-b66e-4c1b-82ec-301a088dc649_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="w1NiYw3cAeNXK2GSnJFVb5/mDhQDKtVcbAvQeQJFzbs="></script>
+    nonce="7YfOlsM/27f+GyoMe4DE+SD+m7SO8bTsMlor4ckV5YY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -171,7 +171,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               ボクシンググローブ　[FBXデータファイル 3DCG オブジェクト]
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -187,7 +187,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      131
+                                      132
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -203,10 +203,12 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      131
+                                      132
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -378,9 +380,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
