--- a/VRChat/13/1064613.html
+++ b/VRChat/13/1064613.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "VeZJkX9HN0x0mYPGM2fvd/6TW9jytMz/Fzx/l9Fo5ew="></script>
+    "iECav2nQCzx6unzwsVJ8Cx9SqYeZfWsZ3NAmaDURLIM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Valuable Rooms","description":"八月二雪 Remix album \n\n1.夜の隣で(Yaca Mix)/YACA IN DA HOUSE\n2.水際(Re-Install The  Ghost)/obake\n3.夢幻(GF Remix)/じーえふ\n4.Hopeless(Midy Mix)/作曲バーチャルYouTuberミディ\n5.悲しみの色(Alter VIP-Remix)/john=hive\n\nllustration by 愛菜","url":"https://booth.pm/ja/items/1064613","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/4e6ac74b-2d4a-4b5d-bc76-8cc39bf34871/i/1064613/4f289a75-c592-45d0-af58-84874f4d86fa_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VeZJkX9HN0x0mYPGM2fvd/6TW9jytMz/Fzx/l9Fo5ew="></script>
+    nonce="iECav2nQCzx6unzwsVJ8Cx9SqYeZfWsZ3NAmaDURLIM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -188,7 +188,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               Valuable Rooms
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -224,6 +224,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -332,9 +334,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
