--- a/VRChat/40/1068940.html
+++ b/VRChat/40/1068940.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "3fwkEB99cB79sW0FrvG4QieI52m88LbdTatHhrFJdEw="></script>
+    "YN0UrFNM8qqESgUYS2hMJJ36Aw3nv7FdoKW9B/uzs38="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchatAvatar】Ayana【制服冬服ver】","description":"オリジナル3Dモデル「Ayana」紹介\n\nVRchatを想定した3DCGモデルです。\nその他、ゲーム、アニメーション、配信等もOKです。\nVRchat用のリップシンク、まばたき以外にも、複数モーフを作成しています。\n改変もどんどん行って頂いて大丈夫です。\nまた、頭部を別のモデルに代えて、衣装として使用して頂てもかませいません。\n\nアイトラッキング対応済み\nフルトラッキングは対応しておりますが、環境がないためテストはしておりません。\nIdleアニメーション付きです！\nデスクトップの方にもおすすめです！\n\n利用条件は当データの再配布と販売以外はほぼ何をして頂いてもかまいませんので、よかったら楽しんでやってください！","url":"https://booth.pm/ja/items/1068940","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/59389fe7-f5ec-46ed-8ba3-90b7d78a625e/i/1068940/a483fe26-2522-4102-ab90-889d022a066c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3fwkEB99cB79sW0FrvG4QieI52m88LbdTatHhrFJdEw="></script>
+    nonce="YN0UrFNM8qqESgUYS2hMJJ36Aw3nv7FdoKW9B/uzs38="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【VRchatAvatar】Ayana【制服冬服ver】
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -296,9 +298,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
