updated at: 2023-08-03 17:11, オリジナル3Dモデル　ろぽり - かなﾘぁさんち - BOOTH

--- a/VRChat/76/1336076.html
+++ b/VRChat/76/1336076.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "8rhrHdex3j7b028z5rNOPmw8pY4pG+EfEjiEs/obXKA="></script>
+    "cTfWauJcecQwuM2uPvry6WyImWvZkXGzr4CbjIbi+AQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　ろぽり","description":"このアバターはAvatars3.0に対応しています。\n■データ概要\n\n・Unitypackage\n・FBX\n・Texture(png）\n・blenderファイル\n\n■利用規約\n・本データをご利用いただいた時点で利用規約に同意したものとみなします。\n・商用、非商用どちらも利用可能です。\n・本データの転載、再配布、ペデスタル利用、パブリックでのアップロードを禁止します。\n・本データ使用によるいかなる損害にも制作者は一切責任を負いません。\n・他人が不快に感じる表現や用途への使用を禁止します。。\n・宗教や政治活動での使用禁止します。\n・公序良俗に反する利用は禁止します。\n\n◆補足\n本規約における再配布の定義の中にVRCへのデータのアップロードは含まれておりません。ただし、アバターペデスタルへの利用、およびパブリック状態でのアップロードを禁止します。\n","url":"https://booth.pm/ja/items/1336076","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/1a3d7c54-a290-40a4-b267-0f2e041fef9a/i/1336076/5e5d8f13-7e0b-4d03-bc25-5f5848fdae89_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8rhrHdex3j7b028z5rNOPmw8pY4pG+EfEjiEs/obXKA="></script>
+    nonce="cTfWauJcecQwuM2uPvry6WyImWvZkXGzr4CbjIbi+AQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -157,7 +157,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               オリジナル3Dモデル　ろぽり
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -193,6 +193,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -313,9 +315,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
