--- a/VRChat/39/1335739.html
+++ b/VRChat/39/1335739.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "48EoaAA8jQ93o8/dFUD6kKT7upU6ockjBdj21hdJHi4="></script>
+    "iVDFl3f+fizhIdJ0uJxgG2yAdqNw/fAgNc6Z+ah0aCQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ヘットフォンジャック（4極）","description":"ただのジャック\nそれ以上も、それ以下でもない\n好きのように使えなさい\nその分、自分で調整しなさい\nでは","url":"https://booth.pm/ja/items/1335739","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/79e66929-95f2-4525-a40b-c5577701dfd1/i/1335739/f11a4250-7670-461f-90a9-2c9f65d8f23f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="48EoaAA8jQ93o8/dFUD6kKT7upU6ockjBdj21hdJHi4="></script>
+    nonce="iVDFl3f+fizhIdJ0uJxgG2yAdqNw/fAgNc6Z+ah0aCQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               ヘットフォンジャック（4極）
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -262,9 +264,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
