updated at: 2023-08-03 17:11, VRChat想定　洋酒セット - 焼き金魚定食 - BOOTH

--- a/VRChat/19/1335319.html
+++ b/VRChat/19/1335319.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "V47Yuw0/QWHPET35kvzMEWDvQDTNBEr1nSYY+TWBqW8="></script>
+    "mGliLAfcuGQ1+OE2BDz+WcJcoibMdUiNg+Cu06JpIZU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定　洋酒セット","description":"VRChatのワールドへの設置を想定した3D素材です。\n洋酒風3Dモデルの10本セットの販売となります。\n\nモデルはFBX形式、10本合計でマテリアル3種、テクスチャ1枚、△18774ポリです。\n\nVRChat向けですが、特に用途の制限はございませんので、 利用規約の範囲内でご自由にお使いください。\n\nガラスの表現にはReflection Probeが必要です。\n設置時に瓶が真っ黒になる場合はReflection Probeの設定を検討ください。","url":"https://booth.pm/ja/items/1335319","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/585e52e7-c633-449a-b3d1-91a68aabbfb2/i/1335319/2ee461bb-f16b-441c-bc62-8471e73fea8a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="V47Yuw0/QWHPET35kvzMEWDvQDTNBEr1nSYY+TWBqW8="></script>
+    nonce="mGliLAfcuGQ1+OE2BDz+WcJcoibMdUiNg+Cu06JpIZU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               VRChat想定　洋酒セット
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1659
+                                      1661
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,10 +185,12 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1659
+                                      1661
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -298,9 +300,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
