--- a/VRChat/82/1335282.html
+++ b/VRChat/82/1335282.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "x+bwf5FO6vOT/Xdo9Y1lKBEgxV2AOMMasR25VkeDyhA="></script>
+    "1GDooVmeZVEMzEhxg7sxFPOoV9d4+4oZ8cxoe34Mnck="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　ライカ -Laika","description":"VRChat向けオリジナル3Dモデル　ライカ -Laika-\n\n※English explanations are below Japanese.\n\n制作:ひばフレ \"Hibax_FRE\"\n","url":"https://booth.pm/ja/items/1335282","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/e56a8ef4-8f34-4b71-9b03-b4f436803f81/i/1335282/157331f2-79a7-4cc6-9f5f-8bae24b244eb_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="x+bwf5FO6vOT/Xdo9Y1lKBEgxV2AOMMasR25VkeDyhA="></script>
+    nonce="1GDooVmeZVEMzEhxg7sxFPOoV9d4+4oZ8cxoe34Mnck="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               オリジナル3Dモデル　ライカ -Laika
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -350,9 +352,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
