updated at: 2023-08-03 17:12, 笠 - 柚吉堂 - BOOTH

--- a/VRChat/26/1334826.html
+++ b/VRChat/26/1334826.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "EW4rCPavcvUVjllvRJp9SaJkrZYNbX3jZOx56BgCJjo="></script>
+    "9GdzEy9gieLIvv1uj+QyHbdP1LPqeFHNT8sRS7x7k0w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"笠","description":"A級ジャンパー攫いとかが身に着ける\n笠を今回はお届け。\n","url":"https://booth.pm/ja/items/1334826","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1334826/5633b87f-4933-4f12-98f9-e0fdc4bd8f76_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EW4rCPavcvUVjllvRJp9SaJkrZYNbX3jZOx56BgCJjo="></script>
+    nonce="9GdzEy9gieLIvv1uj+QyHbdP1LPqeFHNT8sRS7x7k0w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -150,7 +150,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               笠
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -186,6 +186,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -295,9 +297,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
