updated at: 2023-08-03 17:12, 3DCG キッチングッツ Vol.1 - hanjuku - BOOTH

--- a/VRChat/07/1293607.html
+++ b/VRChat/07/1293607.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "mbIOHZo8YSRdx6WkXwjS5qh2xpsdbFPft7s91Z9mLZ0="></script>
+    "idCWY0Qu6aiwXJCsju2ctetBBA2/XqxeMLT1vAGW7nA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3DCG キッチングッツ Vol.1","description":"3DCG キッチングッツVol.1\nスパチュラ　フライ返し　おたま　トング　泡立て器　ペッパーミル　肉たたき　ポテトマッシャ―\n\nこの「3DCG キッチングッツVol.1」は調理場でよく見かけるアイテム8つを一つにまとめた3Dモデルセットになります。\nプラスチック部分と金属部分のカラーはマテリアルで個別調整可能でその時々にあった色にすることができます。","url":"https://booth.pm/ja/items/1293607","offers":{"priceCurrency":"JPY","@type":"Offer","price":"550"},"image":"https://booth.pximg.net/c/620x620/5e3688dc-a990-4181-9d0b-7698aa7c892e/i/1293607/eeeeb619-2b7e-4ee3-9a1a-5ec4cc85c67c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mbIOHZo8YSRdx6WkXwjS5qh2xpsdbFPft7s91Z9mLZ0="></script>
+    nonce="idCWY0Qu6aiwXJCsju2ctetBBA2/XqxeMLT1vAGW7nA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               3DCG キッチングッツ Vol.1
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -298,9 +300,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
